<resources>
    <string name="app_name">a05 p05a12</string>
    <string name="msg1">Olá! Insira \"aluno\" em login e senha</string>
    <string name="txtHint1">Login</string>
    <string name="txtInput1">Login</string>
    <string name="txtHint2">Senha</string>
    <string name="txtInput2">Senha</string>
    <string name="bt1">Confirmar</string>
    <string name="bt2">Limpar</string>
    <string name="bt3">Fechar</string>
    <string name="bt4">Pensar</string>
    <string name="imageView1">Output</string>
</resources>